--- a/css/gt-asides.css
+++ b/css/gt-asides.css
@@ -1,73 +1,195 @@
-.gt-aside {
-    padding-left: 15px;
-    padding-top: 0;
-    padding-bottom: 0;
-    margin-bottom: 0;
-}
-
-.gt-aside .gt-aside-toggle-btn-wrapper {
-    pointer-events: auto;
-    position: relative;
-    overflow: hidden;
-    height: 45px;
-    width: 100%;
-    margin-left: -50px;
-    background: url(../imgs/line.png) no-repeat;
-    background-position: 20px 26px;
-}
-
-.gt-aside .gt-aside-toggle-btn-wrapper .gt-aside-toggle-btn {
-    width: 100%;
-    pointer-events: none;
-}
-
-.gt-aside .gt-aside-toggle-btn-wrapper .gt-aside-toggle-btn .gt-aside-icon:before {
-    display: inline-block;
-    content: '+';
-    position: relative;
-    top: -4px;
-    left: 5px;
-    font-weight: bold;
-}
-
-.gt-aside .gt-aside-toggle-btn-wrapper .gt-aside-toggle-btn .gt-aside-icon {
-    pointer-events: none;
-    display: inline-block;
+/*
+GT Asides basic css. Only loads when an aside is detected on a post. 
+I intentionally omitted the .gt-aside (and others) selector so styles can be easilly overriden by specifity on the theme
+*/
+.gt-content {
     box-sizing: border-box;
-    position: relative;
-    top: 2px;
-    width: 21px;
-    height: 21px;
-    background: #333;
-    border-radius: 15px;
-    padding: 0;
-    color: white;
-    margin: 0 .4em 0 0;
+    position:relative;
+    top:30px;
+    display: block;
+    font-size:85%;
+    -moz-box-shadow:    inset 0 0 5px #999;
+    -webkit-box-shadow: inset 0 0 5px #999;
+    box-shadow:         inset 0 0 5px #999;
+    background: linear-gradient(0deg, #fafafa 5px, rgba(249, 249, 249, 0) 60% ), 
+                linear-gradient(180deg, #fafafa 5px, rgba(249, 249, 249, 0) 60%);
+    margin: 0;
+    padding: 22px 1em 0 30px; 
+    height:auto;
+    transform-origin: top;
+    transform: scaleY(1);
+    opacity:1;
+    transition: transform .5s, opacity 0.2s;
+    /* 
+    border-left: dashed 1px gray;
+    border-right: dashed 1px gray; */
 }
 
-.gt-aside .gt-aside-toggle-btn-wrapper:hover .gt-aside-toggle-btn {}
 
-.gt-aside .gt-aside-toggle-btn-wrapper .gt-aside-toggle-btn .gt-aside-label {
+
+.gt-collapse .gt-content {
+    transform: scaleY(0);
+    padding: 0; 
+    height:0;
+    opacity: 0;
+    
+}
+
+
+.gt-content .gt-toggle-btn {
+    width:100%;
+    top: initial;
+    bottom: -30px;
+}
+
+.gt-collapse .gt-content .gt-toggle-btn {
+    display:none;
+}
+
+
+.gt-content .gt-toggle-btn .gt-icon {
+    top: -12px;
+    transition: top 0.5s;
+}
+
+.gt-content .gt-toggle-btn:hover .gt-icon {
+    top: 0;
     pointer-events: none;
-    display: none;
+    transition: top 0.5s;
 }
 
-.gt-aside.gt-aside-collapse .gt-aside-toggle-btn-wrapper:hover .gt-aside-toggle-btn .gt-aside-label {
-    display: inline-block;
+
+.gt-content .gt-toggle-btn:hover .gt-label {
+    border-bottom: none;  
+    height: 23px;  
 }
 
-.gt-aside .gt-aside-content {}
+.gt-content .gt-toggle-btn .gt-label {
+    height: 0;  
+    display: block;
+    pointer-events: none;
+    top: 0;
+    width: calc(100% + 30px);
+    border-bottom: none;
+    border-top: 1px solid #d0d0d0;
+} 
 
-.gt-aside.gt-aside-collapse .gt-aside-content {}
 
-.gt-aside .gt-aside-example {}
 
-.gt-aside .gt-aside-more {}
+.gt-aside {
+    position:relative;
+    min-height:30px;
+    padding-left: 0 0 0 0;
+    margin: 0 0 2em 0;
+}
 
-.gt-aside .gt-aside-definition {}
+.gt-toggle-btn {
+    pointer-events: auto;
+    cursor: pointer;
+    position:absolute;
+    top: 0;
+    left: -30px;
+    width:100%;
+    width: calc(100% + 30px);
+    height:30px;
+}
 
-.gt-aside .gt-aside-background {}
 
-.gt-aside .gt-aside-in {}
+.gt-toggle-btn .gt-icon:before {
+    display: block;
+    content: '-';
+    position: absolute;
+    top: -15px;
+    left: 2px;
+    font-size: 28px;
+    font-weight: lighter;
+}
+.gt-collapse .gt-toggle-btn .gt-icon:before {
+    font-family: 'sans-serif';
+    font-size: 28px;
+    pointer-events: none;
+    display: block;
+    content: '+';
+    position: absolute;
+    top: -13px;
+    left: 3px;
+    font-weight: normal;
+}
 
-.gt-aside .gt-aside-story {}
+.gt-toggle-btn .gt-icon {
+    pointer-events: none;
+    display: block;
+    position:absolute;
+    bottom:-12px;
+    left: 0;
+    box-sizing: border-box;
+    width: 24px;
+    height: 24px;
+    margin: 0;
+    padding: 0;
+    border: 1px solid #b0b0b0;
+    border-radius: 15px;
+    color: #b0b0b0;
+    background-color: white;
+    z-index: 1;
+    transition: bottom .4s cubic-bezier(0.645, 0.045, 0.355, 1) .1s;
+}
+
+.gt-toggle-btn:hover .gt-icon {
+    bottom: 0;
+    transition: bottom .4s;
+}
+
+.gt-toggle-btn .gt-label {
+    pointer-events: none;
+    display: block;
+    position: absolute;
+    left: 12px;
+    bottom: 0;
+    box-sizing: border-box;
+    width: 100%;
+    height: 0;
+    padding: 0 0 0 18px;
+    border-bottom: 1px solid #b0b0b0;
+    overflow: hidden;
+    z-index:0;
+    transition: height .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+    
+    font-size:80%;
+    text-transform: uppercase;
+}
+
+.gt-collapse .gt-toggle-btn .gt-label {
+    border-bottom: 1px dashed #b0b0b0;
+    width: 50%;
+}
+
+.gt-toggle-btn:hover .gt-label {
+    display: block;
+    height: 23px;
+    left: 12px;
+}
+
+/* Control which button label is shown depènding on the collapsesd state */
+.gt-toggle-btn .gt-label.gt-opened,
+.gt-toggle-btn:hover .gt-label.gt-opened {
+    display:block;
+}
+.gt-toggle-btn .gt-label.gt-collapsed,
+.gt-toggle-btn:hover .gt-label.gt-collapsed {
+    display:none;
+}
+.gt-collapse .gt-toggle-btn .gt-label.gt-opened, 
+.gt-collapse .gt-toggle-btn:hover .gt-label.gt-opened {
+    display:none;
+}
+.gt-collapse .gt-toggle-btn .gt-label.gt-collapsed,
+.gt-collapse .gt-toggle-btn:hover .gt-label.gt-collapsed {
+    display:block;
+}
+
+
+
+/*
+    Opened aside
+---------------------------------------------------------------------------*/
