--- a/assets/css/gt-style.css
+++ b/assets/css/gt-style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Mono');
+
 /* #region gt-aside animated styles */
 /* 
 TODO: Fix this animations
@@ -109,9 +111,13 @@ TODO: Fix this animations
  */
 
 /* #endregion */
+#main.main article h1.entry-title,
+#main.main article h2.entry-title{
+    font-size: 2.5em;
+}
 
 #main.main article h2 {
-    font-size: 1.7em !important;
+    font-size: 1.7em ;
 }
 
 #main.main article h3 {
@@ -134,6 +140,13 @@ TODO: Fix this animations
     padding-left: 3ex;
 }
 
+#main.main article ol {
+    padding-left: 3ex;
+}
+#main.main article ol > li{
+    text-indent: -1em;
+}
+
 #main.main .post.type-post,
 .post.type-post {
     padding-top: 7em;
@@ -141,30 +154,6 @@ TODO: Fix this animations
     margin-bottom: 0;
 }
 
-#main.main .post.type-post:nth-child(2n+1),
-.post.type-post:nth-child(2n+1) {
-    background: radial-gradient( circle at 58% 101%, rgb(116, 25, 72) 0, rgb(116, 25, 72) 10px, rgba(187, 129, 159, 0.5) 11px, rgba(187, 129, 159, 0.5) 15px, transparent 16px), radial-gradient( circle at 75% 98.5%, rgb(116, 25, 72) 0, rgb(116, 25, 72) 20px, rgba(187, 129, 159, 0.5) 21px, rgba(187, 129, 159, 0.5) 27px, transparent 28px), radial-gradient( circle at 88% 100%, rgba(149, 33, 93, 1) 0, rgba(149, 33, 93, 1) 30px, rgba(187, 129, 159, 0.5) 31px, rgba(187, 129, 159, 0.5) 45px, transparent 46px), radial-gradient( circle at 5% 1%, rgb(116, 25, 72) 0, rgb(116, 25, 72) 10px, rgba(187, 129, 159, 0.5) 11px, rgba(187, 129, 159, 0.5) 15px, transparent 16px), radial-gradient( circle at 25% 0.2%, rgb(116, 25, 72) 0, rgb(116, 25, 72) 20px, rgba(187, 129, 159, 0.5) 21px, rgba(187, 129, 159, 0.5) 27px, transparent 28px), radial-gradient( circle at 22% 0%, rgba(149, 33, 93, 1) 0, rgba(149, 33, 93, 1) 30px, rgba(187, 129, 159, 0.5) 31px, rgba(187, 129, 159, 0.5) 45px, transparent 46px), radial-gradient( circle at 95% 100%, transparent 0, transparent 85px, rgb(255, 255, 255) 86px);
-}
-
-#main.main .post.type-post:nth-child(2n),
-.post.type-post:nth-child(2n) {
-    background: radial-gradient( circle at 58% 1%, rgb(116, 25, 72) 0, rgb(116, 25, 72) 10px, rgba(187, 129, 159, 0.5) 11px, rgba(187, 129, 159, 0.5) 15px, transparent 16px), radial-gradient( circle at 75% -1.5%, rgb(116, 25, 72) 0, rgb(116, 25, 72) 20px, rgba(187, 129, 159, 0.5) 21px, rgba(187, 129, 159, 0.5) 27px, transparent 28px), radial-gradient( circle at 88% 0%, rgba(149, 33, 93, 1) 0, rgba(149, 33, 93, 1) 30px, rgba(187, 129, 159, 0.5) 31px, rgba(187, 129, 159, 0.5) 45px, transparent 46px), radial-gradient( circle at 5% 101%, rgb(116, 25, 72) 0, rgb(116, 25, 72) 10px, rgba(187, 129, 159, 0.5) 11px, rgba(187, 129, 159, 0.5) 15px, transparent 16px), radial-gradient( circle at 25% 100.2%, rgb(116, 25, 72) 0, rgb(116, 25, 72) 20px, rgba(187, 129, 159, 0.5) 21px, rgba(187, 129, 159, 0.5) 27px, transparent 28px), radial-gradient( circle at 22% 100%, rgba(149, 33, 93, 1) 0, rgba(149, 33, 93, 1) 30px, rgba(187, 129, 159, 0.5) 31px, rgba(187, 129, 159, 0.5) 45px, transparent 46px), radial-gradient( circle at 95% 0%, transparent 0, transparent 85px, rgb(255, 255, 255) 86px);
-}
-
-
-/* background: linear-gradient(-45deg,  
-    rgba(149, 33, 93, 0.6) 0em,
-        rgba(149, 33, 93, 0.6) 3em,
-        rgba(255, 255, 255, .35) 3.01em,
-        rgba(255, 255, 255, .3) 4em,
-        rgba(149, 33, 93, 0.6) 4.01em,
-        transparent 5.9em,
-        rgba(255, 255, 255, .9) 5.91em,
-        rgba(255, 255, 255, .9) 6.3em,
-        rgba(149, 33, 93, 0.6) 6.31em,
-        rgba(149, 33, 93, 0.6) 6.70em,
-        rgba(255, 255, 255, 1) 6.71em,
-        rgba(255,255,255,1) 100%); */
 
 #main.main .post.type-post .featured-bar {
     height: 5px;
@@ -186,6 +175,53 @@ TODO: Fix this animations
 #main.main .post-thumbnail-container:hover+.featured-bar::before {
     opacity: 0;
 }
-#main.main  pre {
+
+
+#main.main article pre {
     border: none;
+    padding: 0 0 0 2em;
+    font-family: 'Ubuntu Mono', monospace;
+    
+    background-color:transparent;
 }
+
+#main.main article pre code {
+    border: none;
+    font-weight: normal; 
+   /*  font-size: 100%; */
+    background-color:transparent;
+    font-family: 'Ubuntu Mono', monospace;
+}
+
+#main.main article pre code .line-numbers-rows {
+    font-family: 'Ubuntu Mono', monospace;
+    top: -3px;
+    left: -3.4em;
+    border-right: none;
+}
+#main.main article pre code .line-numbers-rows > span:before {
+    color: #fff;
+    padding-right: 0.5em;
+}
+
+#main.main article pre:hover code .line-numbers-rows {
+    border-right: 0.5px dashed #e9e9e9;
+}
+#main.main article pre:hover code .line-numbers-rows > span:before {
+    color: #d0d0d0;
+}
+#main.main article .token.operator {
+    background-color: transparent;
+}
+#main.main article .token.punctuation {
+    color: #000;
+}
+
+
+#main.main article code {
+    vertical-align:top;
+    padding: 0; 
+    background: #eee;
+}
+
+
